[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/icon_GUI_visibility_hidden.svg" type="Texture" id=1]
[ext_resource path="res://assets/icon_GUI_visibility_visible.svg" type="Texture" id=2]
[ext_resource path="res://assets/StatusSuccess.svg" type="Texture" id=3]
[ext_resource path="res://assets/StatusWarning.svg" type="Texture" id=4]
[ext_resource path="res://assets/Remove.svg" type="Texture" id=5]
[ext_resource path="res://assets/Environment.svg" type="Texture" id=6]
[ext_resource path="res://assets/Edit.svg" type="Texture" id=7]
[ext_resource path="res://scenes/ItemDetails.gd" type="Script" id=8]
[ext_resource path="res://style/Theme.tres" type="Theme" id=9]

[node name="ItemDetails" type="WindowDialog"]
margin_left = 9.0
margin_top = 9.0
margin_right = 783.0
margin_bottom = 388.0
script = ExtResource( 8 )

[node name="M" type="MarginContainer" parent="."]
margin_right = 769.0
margin_bottom = 374.0
custom_constants/margin_right = 9
custom_constants/margin_top = 9
custom_constants/margin_left = 9
custom_constants/margin_bottom = 9

[node name="VB" type="VBoxContainer" parent="M"]
margin_left = 9.0
margin_top = 9.0
margin_right = 760.0
margin_bottom = 365.0
custom_constants/separation = 10

[node name="HB" type="HBoxContainer" parent="M/VB"]
margin_right = 751.0
margin_bottom = 27.0
custom_constants/separation = 20

[node name="Title" type="LineEdit" parent="M/VB/HB"]
margin_right = 751.0
margin_bottom = 27.0
size_flags_horizontal = 3
placeholder_text = "Title"

[node name="Username" type="LineEdit" parent="M/VB"]
margin_top = 37.0
margin_right = 751.0
margin_bottom = 64.0
placeholder_text = "Username"

[node name="HB2" type="HBoxContainer" parent="M/VB"]
margin_top = 74.0
margin_right = 751.0
margin_bottom = 101.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="M/VB/HB2"]
margin_top = 5.0
margin_right = 57.0
margin_bottom = 22.0
text = "Password:"

[node name="C1" type="CenterContainer" parent="M/VB/HB2"]
margin_left = 67.0
margin_right = 83.0
margin_bottom = 27.0

[node name="Show" type="TextureButton" parent="M/VB/HB2/C1"]
visible = false
margin_top = 5.0
margin_right = 16.0
margin_bottom = 21.0
texture_normal = ExtResource( 1 )

[node name="Hide" type="TextureButton" parent="M/VB/HB2/C1"]
margin_top = 5.0
margin_right = 16.0
margin_bottom = 21.0
texture_normal = ExtResource( 2 )

[node name="Password" type="LineEdit" parent="M/VB/HB2"]
margin_left = 93.0
margin_right = 725.0
margin_bottom = 27.0
size_flags_horizontal = 3
secret = true

[node name="C2" type="CenterContainer" parent="M/VB/HB2"]
margin_left = 735.0
margin_right = 751.0
margin_bottom = 27.0

[node name="Warn" type="TextureRect" parent="M/VB/HB2/C2"]
visible = false
margin_top = 5.0
margin_right = 16.0
margin_bottom = 21.0
texture = ExtResource( 4 )

[node name="OK" type="TextureRect" parent="M/VB/HB2/C2"]
margin_top = 5.0
margin_right = 16.0
margin_bottom = 21.0
texture = ExtResource( 3 )

[node name="HB3" type="HBoxContainer" parent="M/VB"]
margin_top = 111.0
margin_right = 751.0
margin_bottom = 138.0
custom_constants/separation = 10

[node name="C" type="CenterContainer" parent="M/VB/HB3"]
margin_right = 16.0
margin_bottom = 27.0

[node name="WWW" type="TextureButton" parent="M/VB/HB3/C"]
margin_top = 5.0
margin_right = 16.0
margin_bottom = 21.0
texture_normal = ExtResource( 6 )

[node name="URL" type="LineEdit" parent="M/VB/HB3"]
margin_left = 26.0
margin_right = 751.0
margin_bottom = 27.0
size_flags_horizontal = 3
placeholder_text = "URL"

[node name="Label" type="Label" parent="M/VB"]
margin_top = 148.0
margin_right = 751.0
margin_bottom = 165.0
text = "Notes"

[node name="Notes" type="TextEdit" parent="M/VB"]
margin_top = 175.0
margin_right = 751.0
margin_bottom = 275.0
rect_min_size = Vector2( 0, 100 )
wrap_enabled = true

[node name="HB4" type="HBoxContainer" parent="M/VB"]
margin_top = 285.0
margin_right = 751.0
margin_bottom = 356.0
custom_constants/separation = 40

[node name="Time" type="GridContainer" parent="M/VB/HB4"]
margin_right = 285.0
margin_bottom = 71.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 5

[node name="Label" type="Label" parent="M/VB/HB4/Time"]
margin_right = 56.0
margin_bottom = 17.0
text = "Created:"

[node name="Created" type="Label" parent="M/VB/HB4/Time"]
margin_left = 66.0
margin_right = 130.0
margin_bottom = 17.0
text = "2022-03-01"

[node name="Label5" type="Label" parent="M/VB/HB4/Time"]
margin_left = 140.0
margin_right = 185.0
margin_bottom = 17.0
text = "Expire:"

[node name="Expire" type="Label" parent="M/VB/HB4/Time"]
margin_left = 195.0
margin_right = 259.0
margin_bottom = 17.0
rect_min_size = Vector2( 64, 0 )

[node name="EditExpire" type="TextureButton" parent="M/VB/HB4/Time"]
margin_left = 269.0
margin_right = 285.0
margin_bottom = 17.0
texture_normal = ExtResource( 7 )

[node name="Label2" type="Label" parent="M/VB/HB4/Time"]
margin_top = 27.0
margin_right = 56.0
margin_bottom = 44.0
text = "Modified:"

[node name="Modified" type="Label" parent="M/VB/HB4/Time"]
margin_left = 66.0
margin_top = 27.0
margin_right = 130.0
margin_bottom = 44.0
text = "2022-03-01"

[node name="Label4" type="Label" parent="M/VB/HB4/Time"]
margin_left = 140.0
margin_top = 27.0
margin_right = 185.0
margin_bottom = 44.0
text = "Remind:"

[node name="Remind" type="Label" parent="M/VB/HB4/Time"]
margin_left = 195.0
margin_top = 27.0
margin_right = 259.0
margin_bottom = 44.0

[node name="EditRemind" type="TextureButton" parent="M/VB/HB4/Time"]
margin_left = 269.0
margin_top = 27.0
margin_right = 285.0
margin_bottom = 44.0
texture_normal = ExtResource( 7 )

[node name="Label3" type="Label" parent="M/VB/HB4/Time"]
margin_top = 54.0
margin_right = 56.0
margin_bottom = 71.0
text = "Accessed:"

[node name="Accessed" type="Label" parent="M/VB/HB4/Time"]
margin_left = 66.0
margin_top = 54.0
margin_right = 130.0
margin_bottom = 71.0
text = "2022-03-01"

[node name="Blank1" type="Control" parent="M/VB/HB4/Time"]
margin_left = 140.0
margin_top = 54.0
margin_right = 185.0
margin_bottom = 71.0

[node name="Blank2" type="Control" parent="M/VB/HB4/Time"]
margin_left = 195.0
margin_top = 54.0
margin_right = 259.0
margin_bottom = 71.0

[node name="Delete" type="TextureButton" parent="M/VB/HB4/Time"]
margin_left = 269.0
margin_top = 54.0
margin_right = 285.0
margin_bottom = 71.0
hint_tooltip = "Delete this password record"
texture_normal = ExtResource( 5 )

[node name="VB" type="VBoxContainer" parent="M/VB/HB4"]
margin_left = 325.0
margin_right = 360.0
margin_bottom = 71.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="M/VB/HB4/VB"]
margin_right = 35.0
margin_bottom = 17.0
text = "Group"

[node name="Groups" type="ItemList" parent="M/VB/HB4/VB"]
margin_top = 27.0
margin_right = 35.0
margin_bottom = 27.0

[node name="Confirm" type="ConfirmationDialog" parent="."]
margin_right = 200.0
margin_bottom = 70.0
theme = ExtResource( 9 )
dialog_text = "Delete?"

[connection signal="text_changed" from="M/VB/HB/Title" to="." method="_on_Title_text_changed"]
[connection signal="text_changed" from="M/VB/Username" to="." method="_on_Username_text_changed"]
[connection signal="pressed" from="M/VB/HB2/C1/Show" to="." method="_on_Show_pressed"]
[connection signal="pressed" from="M/VB/HB2/C1/Hide" to="." method="_on_Hide_pressed"]
[connection signal="text_changed" from="M/VB/HB2/Password" to="." method="_on_Password_text_changed"]
[connection signal="pressed" from="M/VB/HB3/C/WWW" to="." method="_on_WWW_pressed"]
[connection signal="text_changed" from="M/VB/HB3/URL" to="." method="_on_URL_text_changed"]
[connection signal="text_changed" from="M/VB/Notes" to="." method="_on_Notes_text_changed"]
[connection signal="pressed" from="M/VB/HB4/Time/Delete" to="." method="_on_Delete_pressed"]
[connection signal="confirmed" from="Confirm" to="." method="_on_Confirm_confirmed"]
